--- a/Diretor/Diretor.csproj
+++ b/Diretor/Diretor.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Reference Include="Funcionario">
+      <HintPath>..\Funcionario\bin\Debug\net6.0\Funcionario.dll</HintPath>
+    </Reference>
     <Reference Include="Pessoa">
       <HintPath>..\Pessoa.cs\bin\Debug\net6.0\Pessoa.dll</HintPath>
     </Reference>
