--- a/UCCI/UCCI.csproj
+++ b/UCCI/UCCI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,6 +12,9 @@
     </Reference>
     <Reference Include="Funcionario">
       <HintPath>..\Funcionario\bin\Debug\net6.0\Funcionario.dll</HintPath>
+    </Reference>
+    <Reference Include="Medico">
+      <HintPath>..\Medico\bin\Debug\net6.0\Medico.dll</HintPath>
     </Reference>
     <Reference Include="Pessoa">
       <HintPath>..\Pessoa.cs\bin\Debug\net6.0\Pessoa.dll</HintPath>
