--- a/UCCI/UCCI.csproj
+++ b/UCCI/UCCI.csproj
@@ -7,20 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Diretor">
-      <HintPath>..\Diretor\bin\Debug\net6.0\Diretor.dll</HintPath>
-    </Reference>
-    <Reference Include="Funcionario">
-      <HintPath>..\Funcionario\bin\Debug\net6.0\Funcionario.dll</HintPath>
-    </Reference>
-    <Reference Include="Medico">
-      <HintPath>..\Medico\bin\Debug\net6.0\Medico.dll</HintPath>
-    </Reference>
-    <Reference Include="Pessoa">
-      <HintPath>..\Pessoa.cs\bin\Debug\net6.0\Pessoa.dll</HintPath>
-    </Reference>
-    <Reference Include="Utente">
-      <HintPath>..\Utente\bin\Debug\net6.0\Utente.dll</HintPath>
+    <Reference Include="Person">
+      <HintPath>..\Pessoa.cs\bin\Debug\net6.0\Person.dll</HintPath>
     </Reference>
   </ItemGroup>
 
