--- a/Persons/Persons.csproj
+++ b/Persons/Persons.csproj
@@ -7,12 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Persons">
-      <HintPath>..\Persons\bin\Debug\net6.0\Persons.dll</HintPath>
-    </Reference>
-    <Reference Include="Product">
-      <HintPath>..\Product\bin\Debug\net6.0\Product.dll</HintPath>
-    </Reference>
+    <Compile Remove="Class1.cs" />
   </ItemGroup>
 
 </Project>
