--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Reference Include="Equipment">
+      <HintPath>..\Equipamentos\bin\Debug\net6.0\Equipment.dll</HintPath>
+    </Reference>
     <Reference Include="Persons">
       <HintPath>..\Persons\bin\Debug\net6.0\Persons.dll</HintPath>
     </Reference>
