--- a/Interfaces/Interfaces.csproj
+++ b/Interfaces/Interfaces.csproj
@@ -10,6 +10,9 @@
     <Reference Include="Dados">
       <HintPath>..\Dados\bin\Debug\net6.0\Dados.dll</HintPath>
     </Reference>
+    <Reference Include="Excecao">
+      <HintPath>..\Excessoes\bin\Debug\net6.0\Excecao.dll</HintPath>
+    </Reference>
     <Reference Include="ObjetosdeNegocio">
       <HintPath>..\ObjetosdeNegocio\bin\Debug\net6.0\ObjetosdeNegocio.dll</HintPath>
     </Reference>
