--- a/RegrasdeNegocio/RegrasdeNegocio.csproj
+++ b/RegrasdeNegocio/RegrasdeNegocio.csproj
@@ -10,8 +10,8 @@
     <Reference Include="Dados">
       <HintPath>..\Dados\bin\Debug\net6.0\Dados.dll</HintPath>
     </Reference>
-    <Reference Include="Excessoes">
-      <HintPath>..\Excessoes\bin\Debug\net6.0\Excessoes.dll</HintPath>
+    <Reference Include="Excecao">
+      <HintPath>..\Excessoes\bin\Debug\net6.0\Excecao.dll</HintPath>
     </Reference>
     <Reference Include="ObjetosdeNegocio">
       <HintPath>..\ObjetosdeNegocio\bin\Debug\net6.0\ObjetosdeNegocio.dll</HintPath>
